# queue

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  LICENSE  MANIFEST  MYMETA.yml  Makefile  Makefile.PL  README.md  README.rus.md  init.lua  queue-collection-scm-1.rockspec  queue-scm-1.rockspec  queue.lua  tarantool.cfg  test-docker.sh  test-local.sh  test.sh
.github/workflows/: fast_testing.yml  packaging.yml  publish.yml  reusable_testing.yml
benchmark/: channel.pl  init.lua  ping.pl  pqueue-mix.pl  pqueue.pl  queue.pl  test.pl
blib/lib/DR/: TarantoolQueue.pm
blib/lib/DR/TarantoolQueue/: JSE.pm  Task.pm
cmake/: FindTarantool.cmake
config/db/: init.lua  tarantool.cfg
debian/: .gitignore  changelog  control  copyright  dr-tarantool-queue.dirs  dr-tarantool-queue.install  prebuild.sh  rules  tarantool-queue.install  watch
doc/src/: statediagram.puml
lib/DR/: TarantoolQueue.pm
lib/DR/TarantoolQueue/: Task.pm  Worker.pm
queue/: CMakeLists.txt  abstract.lua  compat.lua  init.lua  util.lua  version.lua
queue/abstract/: num.lua  queue_session.lua  queue_state.lua  state.lua  version.lua
queue/abstract/driver/: fifo.lua  fifottl.lua  lifottl.lua  limfifottl.lua  stube.lua  utube.lua  utubettl.lua
rockspecs/: queue-1.0.2-1.rockspec  queue-1.0.4-1.rockspec  queue-scm-1.rockspec
rpm/: prebuild.sh  tarantool-queue.spec
sequence_test_mvcc/: config.lua  example_test.go  fifo.lua
t/: 000-init.t  000-queue.t  001-tube-init.t  001-version.t  002-num.t  010-dr-tqueue.t  010-fifo.t  020-fifottl.t  020-worker.t  030-parallel.t  030-utube.t  040-utubettl.t  050-stube.t  050-ttl.t  060-async.t  070-compat.t  080-otc-cb.t  090-grant-check.t  100-lifottl.t  100-limfifottl.t  110-disconnect-trigger-check.t  120-take-task-after-reconnect.t  130-release-all-tasks-on-start.t  140-register-driver-after-cfg.t  150-lazy-start.t  160-validate-space.t  170-register-driver-after-reload.t  180-work-with-uuid.t  190-work-with-ttl-buried-task.t  200-master-replica.t  210-cfg-in-replicaset.t  220-mvcc.t  230-orphan-not-stalling-init.t  240-grant-via-role.t  240-ro-on-disconnect.t
t/benchmark/: async_python.lua  async_python.py  busy_utubes.lua  many_utubes.lua  multi_consumer_work.lua
t/tnt/: init.lua
