install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/init.lua
        DESTINATION ${TARANTOOL_INSTALL_LUADIR}/${PROJECT_NAME}/)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/abstract.lua
        DESTINATION ${TARANTOOL_INSTALL_LUADIR}/${PROJECT_NAME}/)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/abstract/state.lua
        DESTINATION ${TARANTOOL_INSTALL_LUADIR}/${PROJECT_NAME}/abstract)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/abstract/driver/fifo.lua
        DESTINATION ${TARANTOOL_INSTALL_LUADIR}/${PROJECT_NAME}/abstract/driver/)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/abstract/driver/utube.lua
        DESTINATION ${TARANTOOL_INSTALL_LUADIR}/${PROJECT_NAME}/abstract/driver/)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/abstract/driver/fifottl.lua
        DESTINATION ${TARANTOOL_INSTALL_LUADIR}/${PROJECT_NAME}/abstract/driver/)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/abstract/driver/utubettl.lua
        DESTINATION ${TARANTOOL_INSTALL_LUADIR}/${PROJECT_NAME}/abstract/driver/)
